--- a/style.css
+++ b/style.css
@@ -11,11 +11,10 @@ body {
 }
 
 .blinking-text {
-    text-align: center;
     font-size: 200px;
     color: #484848;
     font-weight: 900;
-    display: flex; /* Pour ne pas avoir le décalage des inlines */
+    display: flex;
     justify-content: center;
 }
 .blinking-text span {
@@ -23,14 +22,16 @@ body {
     display: inline-block;
 }
 .blinking-text span::after {
-    display: inline-block;
     content: attr(data-letter);
+    display: inline-block;
     position: absolute;
     left: 0;
     color: #fff900;
-    text-shadow: 0 0 2px #fff900, 0 0 10px #fff900;
+    text-shadow: 
+    0 0 2px #fff900,
+    0 0 10px #fff900;
     opacity: 0;
-    animation: blinking 2s ease-in-out infinite;
+    animation: blinking 1.25s ease-in-out infinite;
 }
 
 @keyframes blinking {
@@ -43,11 +44,8 @@ body {
     50% {
         opacity: 0;
     }
-} 
+}
 
-
-.blinking-text span:nth-child(1)::after{animation-delay: 0s;}
 .blinking-text span:nth-child(2)::after{animation-delay: 0.1s;}
 .blinking-text span:nth-child(3)::after{animation-delay: 0.2s;}
 .blinking-text span:nth-child(4)::after{animation-delay: 0.3s;}
-
